src/objects/Requirement_UserStory__c.object
<CustomObject>
    <description>PMO: Requirements Management. Input requirement details and track Requirement status</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assign_To_SBA_BA__c</fullName>
        <label>Assign To SBA / BA</label>
        <picklist>
            <picklistValues>
                <fullName>Zibin Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tulipe Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Zhang</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_TA_Developer__c</fullName>
        <label>Assign To TA / Developer</label>
        <picklist>
            <picklistValues>
                <fullName>Allen Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lu Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tony Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tulipe Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ying Jun</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assign_to_TA_TC_user__c</fullName>
        <label>Assign to TA/TC (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BA_Hours__c</fullName>
        <label>BA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Remarks__c</fullName>
        <label>Build Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <inlineHelpText>Function user who raises or is responsible to validate this requirement</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <label>Biz Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_By__c</fullName>
        <label>Deployment By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Remarks__c</fullName>
        <label>Deployment Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Completed__c</fullName>
        <label>Dev Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Hours__c</fullName>
        <label>Developer Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funcational_Owner_Remarks__c</fullName>
        <description>For functional owners</description>
        <label>Function Owner Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Level_Solution__c</fullName>
        <label>High Level Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Test_Lead_Remark__c</fullName>
        <description>For TCS team</description>
        <label>IT Test Lead Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Object__c</fullName>
        <label>Module / Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact / Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle / Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Record</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pre_User_Story__c</fullName>
        <label>Pre User Story</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Requirement / User Story (Pre User Story)</relationshipLabel>
        <relationshipName>Pre_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_BQ__c</fullName>
        <label>Ref BQ#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Process_UC__c</fullName>
        <label>Ref Process#/UC#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <description>Related Requirement - for duplicates or joint requirements or parent/child</description>
        <inlineHelpText>Related Requirement - for duplicates or joint requirements or parent/child</inlineHelpText>
        <label>Related Requirement</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipName>Related_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release / Phase</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark_Question__c</fullName>
        <label>Remark / Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark_Question_by_BA__c</fullName>
        <label>Remark/Question by BA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Req_Unique_Id__c</fullName>
        <description>hidden field, copy of Requirement Id and make sure it&apos;s unique</description>
        <externalId>true</externalId>
        <label>*Req Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Requirement_Adjustment__c</fullName>
        <label>Requirement Adjustment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Description of business requirement</description>
        <inlineHelpText>Description of business requirement</inlineHelpText>
        <label>Requirement Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reviewed by SA/TA</inlineHelpText>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBA_BA_Man_Days__c</fullName>
        <label>SBA/BA Man-Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBA_Hours__c</fullName>
        <label>SBA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenshot?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Architecture__c</fullName>
        <label>Solution Architecture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect for Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Box</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Requirement__c</fullName>
        <label>Source of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Original / BPR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The stage of requirement. Each status will send emails to related team automatically.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initialized</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clarify with Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Identified - Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Identified - Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending on Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training / Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Data Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending on Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out Of Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Developer_Man_Days__c</fullName>
        <label>TA/Developer Man-Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TA_Hours__c</fullName>
        <label>TA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Script_Ready__c</fullName>
        <label>Test Script Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tested_Date__c</fullName>
        <label>Tested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Story_Detail__c</fullName>
        <description>Description of User Story</description>
        <label>User Story Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assign_to_BA_user__c</fullName>
        <label>Assigned To BA/SBA (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement / User Story</label>
    <listViews>
        <fullName>All_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>Assign_to_TA_TC_user__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Test_Script_Ready__c</columns>
        <columns>Dev_Completed__c</columns>
        <columns>Tested_Date__c</columns>
        <columns>Validated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.Requirement</value>
        </filters>
        <label>All Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>User_Story_Detail__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Pre_User_Story__c</columns>
        <columns>High_Level_Solution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>All User Stories</label>
    </listViews>
    <listViews>
        <fullName>Case_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>User_Story_Detail__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Pre_User_Story__c</columns>
        <columns>High_Level_Solution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <filters>
            <field>Module_Object__c</field>
            <operation>includes</operation>
            <value>Case</value>
        </filters>
        <label>Case User Stories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Function_Validated</fullName>
        <columns>NAME</columns>
        <columns>Iteration__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Function Validated</value>
        </filters>
        <label>Function Validated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IT_Tested</fullName>
        <columns>NAME</columns>
        <columns>Business_Owner__c</columns>
        <columns>Iteration__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>IT Tested</value>
        </filters>
        <label>IT Tested</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>Assign_to_TA_TC_user__c</columns>
        <columns>Category__c</columns>
        <columns>Test_Script_Ready__c</columns>
        <columns>Dev_Completed__c</columns>
        <columns>Tested_Date__c</columns>
        <columns>Validated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>includes</operation>
            <value>Integration</value>
        </filters>
        <label>Integration</label>
    </listViews>
    <listViews>
        <fullName>Not_Completed_List</fullName>
        <columns>NAME</columns>
        <columns>Business_Owner__c</columns>
        <columns>Iteration__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Function Validated</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>notEqual</operation>
            <value>Dev1.1</value>
        </filters>
        <label>Not Completed List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_on_Function</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Requirement_Adjustment__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>IT_Test_Lead_Remark__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Funcational_Owner_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending on Function</value>
        </filters>
        <label>Pending on Function</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Phase_1_In_Development</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Status__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>Category__c</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>DEV</value>
        </filters>
        <label>Phase 1 - In Development</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Testing</fullName>
        <columns>NAME</columns>
        <columns>Iteration__c</columns>
        <columns>Module_Object__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Testing</value>
        </filters>
        <label>Ready for Testing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Report_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Critical__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Assign_to_TA_TC_user__c</columns>
        <columns>Test_Script_Ready__c</columns>
        <columns>Dev_Completed__c</columns>
        <columns>Tested_Date__c</columns>
        <columns>Validated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Report/Dashboard</label>
    </listViews>
    <listViews>
        <fullName>Return_to_Dev</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Description__c</columns>
        <columns>IT_Test_Lead_Remark__c</columns>
        <columns>Funcational_Owner_Remarks__c</columns>
        <columns>Assign_To_TA_Developer__c</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Return to Dev</value>
        </filters>
        <label>Return to Dev</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Requirement ID</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I900000014ReUEAU_00N90000004y8UxEAI</fullName>
        <active>true</active>
        <field>Requirement_UserStory__c.Pre_User_Story__c</field>
        <filterItems>
            <field>Requirement_UserStory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Story</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Requirement / User Story_Pre User Story</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000014aDgEAI_00N90000004sAVDEA2</fullName>
        <active>false</active>
        <field>Requirement_User_Story__c.Requirement__c</field>
        <filterItems>
            <field>Requirement_UserStory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Requirement</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Requirement - User Story_Requirement</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I900000014aDgEAI_00N90000004sAVIEA2</fullName>
        <active>true</active>
        <field>Requirement_User_Story__c.User_Story__c</field>
        <filterItems>
            <field>Requirement_UserStory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>User Story</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Requirement - User Story_User Story</name>
    </namedFilters>
    <pluralLabel>Requirement / User Story</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>